Gramatica.txt
<Exp> ::= [LET] ID EQ <Exp>
<Exp> ::= <Term> ((MINUS | PLUS) <Term>)*
<Term> ::= <Factor> ((MUL | DIV) <Factor>)*
<Factor> ::= (PLUS | MINUS)* <Factor>
<Factor> ::= <Pow>
<Factor> ::= <Atom>
<Pow> ::= <Atom> (POW <Pow>)*
<Atom> ::= INT | FLOAT | STRING | ID | LPAR <Exp> RPAR

PLUS é o +
MUL é o *
DIV é o /
MINUS é o -
POW é o ^
LPAR é o (
RPAR é o )
INT é um inteiro qualquer
FLOAT é um float qualquer
ID é qualquer identificador
LET é a palavra reservada let
STRING algo entre aspas
